@@ -1,3 +1,11 @@
+Tue Aug 25 18:04:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * bin/DCPS/CPPTemplate.pm:
+        * dds/DCPS/RakeResults_T.h:
+        * dds/DCPS/RakeResults_T.cpp:
+
+          Added support for PRESENTATION ordered_access.
+
 Mon Aug 24 22:06:00 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * bin/DCPS/CPPTemplate.pm:
